<resources>
    <string name="app_name">camp</string>
    <string name="title_activity_questions">QuestionsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="content_description">Content Description</string>
    <string name="song_name">Song Name</string>
    <string name="artists_name">Artists Name</string>
    <string name="duration_time">Duration Time</string>
    <string name="year">Year</string>
    <string name="save">Save</string>
    <string name="add_text">Add Text</string>
    <string name="add_song">Add Song</string>
    <string name="delete_all">Delete All</string>
    <string name="duration">%d:%d</string>
    <string name="finish_exam">End Exam</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="phone_number_format">phone number format is 5321112233</string>
    <string name="sms_code_validation">sms code 6 haneli olmalıdır</string>
    <string name="welcome_user">Welcome %1$s</string>
    <string name="sign_out">Sign Out</string>
    <string name="sms_code_warning">6 haneli sms kodunuzu giriniz.</string>
    <string name="enter_sms_code">Enter sms Code</string>
    <string name="verify">Verify</string>
    <string name="title_activity_bilgi_yarismasi">BilgiYarismasiActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- İsmail Talha Dengiz, Ödev-1,2 -->
    <string name="collection_name">talhadengiz</string>
    <string name="student_number">Öğrenci Numarası</string>
    <string name="lesson_name">Ders Adı</string>
    <string name="midterm_point">Vize Notu</string>
    <string name="final_point">Final Notu</string>
    <string name="save_exam">Kaydet</string>
    <string name="tum_alanlar_doldurulmalidir">Tüm alanlar doldurulmalıdır !</string>
    <string name="successful">Başarılı</string>
    <string name="email">E-mail</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="location">Konum</string>
    <string name="gmail">Gmail ile bağlan</string>
    <string name="twitter">Twitter ile bağlan</string>
    <string name="facebook">Facebook ile bağlan</string>
    <string name="terms">Koşullar</string>
    <string name="privacy">Gizlilik Hakkı</string>
    <string name="profile_settings">Profil Ayarları</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- - - - - - - - - - - - - - - - -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kim_500_milyon_ister">Kim 500 Milyon İster</string>

    <string name="email_login">Email</string>
    <string name="password_email_login">Password</string>
    <string name="confirm_password_email">Confirm Password</string>
    <string name="signup_email">Signup</string>
    <string name="login_email_buton">Login</string>
    <string name="or_login_with_email">or login with</string>
    <string name="signuptext_email">Signup</string>
    <string name="or_signup_with_email">or signup with</string>
    <string name="dummydesc">With HepsiBurada Bootcamp Students...</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="app_name" translatable="false">Address</string>
    <string name="actvHint" translatable="false">Şehir</string>
    <string name="actvHint2" translatable="false">İlçe</string>
    <string name="adresBilgileri" translatable="false">Mahalle, sokak, cadde ve diğer bilgileri giriniz</string>
</resources>