<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.android.camp.navigationcomponent.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.android.camp.navigationcomponent.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.android.camp.navigationcomponent.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.android.camp.navigationcomponent.ui.DenemeFragment"
        android:label="Login2345"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_sms_code"
            app:destination="@id/nav_sms_code" />
    </fragment>

    <fragment
        android:id="@+id/nav_sms_code"
        android:name="com.android.camp.login.SmsVerficationCodeFragment"
        android:label="SMS Code"
        tools:layout="@layout/fragment_sms_verification_code" />
</navigation>