<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:id="@+id/text_input_layout_phone_number"
            app:helperText="@string/phone_number_format"
            android:hint="@string/phone_number"
            app:prefixText="5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="number"
                android:maxLength="9"
                android:id="@+id/edit_text_phone_number"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginTop="20dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_phone_number"
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>