<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gamecenter">

    </ImageView>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="382dp" />

    <TextView
        android:id="@+id/txtGameCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Game Center"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="284dp" />

    <TextView
        android:id="@+id/txtGamecenterinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start using Game Center with your Apple ID to play games online with your friends, wherever they are."
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="299dp" />
</androidx.constraintlayout.widget.ConstraintLayout>

